--- a/ui/src/app/views/account-creation/component.css
+++ b/ui/src/app/views/account-creation/component.css
@@ -18,7 +18,7 @@
 }
 
 .short-input {
-  width: 10rem;
+  width: 12rem;
 }
 
 .short-button {
@@ -44,4 +44,33 @@
   font-size: 16px;
   font-weight: 300;
   color: #302C71;
+}
+
+.icon-area {
+  display: inline-block;
+  margin-left: -30px;
+  min-width: 30px;
+}
+
+input[type=text]:not([readonly]).successfulInput,
+input[type=password]:not([readonly]).successfulInput {
+  border-color: #7AC79B;
+}
+
+.success-standard {
+  fill: #7AC79B;
+  width: 20px;
+  height: 20px;
+}
+
+input[type=text]:not([readonly]).unsuccessfulInput,
+input[type=password]:not([readonly]).unsuccessfulInput {
+  background-color: #FCEFEC;
+  border-color: #F68D76;
+}
+
+.warning-standard {
+  fill: #F68D76;
+  width: 20px;
+  height: 20px;
 }
