--- a/ui/src/app/views/account-creation/component.html
+++ b/ui/src/app/views/account-creation/component.html
@@ -14,7 +14,14 @@
       </div>
     </div>
     <div class="form-section">
-      <input type="text" class="short-input" id="username" name="username" [(ngModel)]="profile.username" (ngModelChange)="usernameChanged()" placeholder="New Username">
+      <input type="text" class="short-input" id="username" name="username"
+             [(ngModel)]="profile.username" (ngModelChange)="usernameChanged()" (blur)="leaveFocusUsername()"
+             (focus)="enterFocusUsername()" placeholder="New Username"
+             [ngClass]="{'successfulInput': usernameValidationSuccess, 'unsuccessfulInput': usernameValidationError}">
+      <div class="icon-area">
+        <clr-icon shape="warning-standard" class="warning-standard is-solid" *ngIf="usernameValidationError"></clr-icon>
+        <clr-icon shape="success-standard" class="success-standard is-solid" *ngIf="usernameValidationSuccess"></clr-icon>
+      </div>
       <clr-tooltip>
         <clr-icon clrTooltipTrigger shape="info-standard" class="is-solid info-icon"></clr-icon>
         <clr-tooltip-content clrPosition="top-right" clrSize="lg" *clrIfOpen>
@@ -29,32 +36,45 @@
           </div>
         </clr-tooltip-content>
       </clr-tooltip>
-      <div *ngIf="usernameConflictError" class="error">
+      <div *ngIf="usernameConflictError && usernameOffFocus" class="error">
         Username is already taken.
       </div>
-      <div *ngIf="usernameInvalidError" class="error">
+      <div *ngIf="usernameInvalidError && usernameOffFocus" class="error">
         Username is not a valid username.
       </div>
     </div>
     <div class="form-section">
-      <input type="password" class="short-input" id="password" name="password" [(ngModel)]="password" placeholder="Password">
+      <input type="password" class="short-input" id="password" name="password" [(ngModel)]="password" placeholder="Password"
+             (blur)="leaveFocusPassword()" (focus)="enterFocusPassword()"
+             [ngClass]="{'successfulInput': passwordValidationSuccess, 'unsuccessfulInput': passwordValidationError}">
+      <div class="icon-area">
+        <clr-icon shape="warning-standard" class="warning-standard is-solid" *ngIf="passwordValidationError"></clr-icon>
+        <clr-icon shape="success-standard" class="success-standard is-solid" *ngIf="passwordValidationSuccess"></clr-icon>
+      </div>
       <clr-tooltip>
         <clr-icon clrTooltipTrigger shape="info-standard" class="is-solid info-icon"></clr-icon>
         <clr-tooltip-content clrPosition="top-right" clrSize="lg" *clrIfOpen>
           Passwords must contain at least one lowercase and one uppercase letter
         </clr-tooltip-content>
       </clr-tooltip>
-      <div *ngIf="showPasswordLengthError" class="error">
+      <div *ngIf="showPasswordLengthError && passwordOffFocus" class="error">
         Password must be between 8 and 100 characters long.
       </div>
-      <div *ngIf="containsLowerAndUpperError" class="error">
+      <div *ngIf="containsLowerAndUpperError && passwordOffFocus" class="error">
         Password must contain one lowercase and one uppercase letter.
       </div>
     </div>
     <div class="form-section">
-      <input type="password" class="short-input" for="passwordAgain" name="passwordAgain" [(ngModel)]="passwordAgain" placeholder="Confirm Password">
+      <input type="password" class="short-input" for="passwordAgain" name="passwordAgain"
+             (blur)="leaveFocusPasswordAgain()" (focus)="enterFocusPasswordAgain()"
+             [(ngModel)]="passwordAgain" placeholder="Confirm Password"
+             [ngClass]="{'successfulInput': passwordAgainValidationSuccess, 'unsuccessfulInput': passwordAgainValidationError}">
+      <div class="icon-area">
+        <clr-icon shape="warning-standard" class="warning-standard is-solid" *ngIf="passwordAgainValidationError"></clr-icon>
+        <clr-icon shape="success-standard" class="success-standard is-solid" *ngIf="passwordAgainValidationSuccess"></clr-icon>
+      </div>
     </div>
-    <div *ngIf="showPasswordsDoNotMatchError" class="error">
+    <div *ngIf="showPasswordsDoNotMatchError && passwordAgainOffFocus" class="error">
       Passwords do not match.
     </div>
     <div class="form-section">
