--- a/ui/src/app/views/homepage/component.css
+++ b/ui/src/app/views/homepage/component.css
@@ -1,12 +1,15 @@
+.front-page {
+    margin-left: -1rem;
+    margin-right: -.6rem;
+    text-align: center;
+    position: relative;
+}
+
 .background-image {
     background-image: url('/assets/images/homepage.png');
     background-repeat: no-repeat;
     z-index: -1;
     background-size: cover;
-    right: 0rem;
-    top: 3.3rem;
-    width: 100%;
-    position: absolute;
     /*height: calc(100vh - 3.3rem);*/
     height: 41rem;
 }
@@ -15,21 +18,29 @@
     opacity: .47;
     background-color: #000000;
     box-shadow: 0 1px 4px 0 rgba(0,0,0,0.28);
+    position: absolute;
     margin-top: 5rem;
-    margin-left: 3rem;
-    margin-right: auto;
+    left: 50%;
+    transform: translate(-50%, 0);
     width: 80%;
     height: 11rem;
+    z-index: 1;
+}
+
+.invisible_rectangle {
+    margin-top: 5rem;
+    width: 80%;
+    z-index: 2;
+    height: 11rem;
     position: absolute;
+    left: 50%;
+    transform: translate(-50%, 0);
 }
 
 .tip-title {
-    margin-top: 5rem;
-    margin-left: 3rem;
     color: #FFFFFF;
     padding-top: 1rem;
     padding-left: 2rem;
-    z-index: 1;
     font-size: 2rem;
     font-weight: 300;
     line-height: 2.2rem;
@@ -48,22 +59,26 @@
     font-size: .75rem;
     line-height: 1rem;
     font-weight: lighter;
-    width: 50rem;
+    text-align: left;
+    width: 55%;
 }
 
 .learn-more-button {
-    height: 1.875rem;
+    display: flex;
+    align-content: center;
+    justify-content: center;
+    flex-direction: column;
+    height: 1.5rem;
     width: 6.5rem;
+    -webkit-border-radius: .3125rem;
+    -moz-border-radius: .3125rem;
     border-radius: .3125rem;
     background-color: #60AEE0;
     position: absolute;
-    z-index: 1;
     color: #FFFFFF;
-    margin-top: 13.5rem;
-    margin-left: 5rem;
-    padding-top: .5rem;
-    padding-left: .7rem;
-    font-weight: 500;
+    margin-top: 9rem;
+    margin-left: 2rem;
+    font-weight: 300;
     font-size: .75rem;
 }
 
@@ -71,12 +86,11 @@
     height: 11rem;
     background-color: #FFFFFF;
     box-shadow: 0 1px 4px 0 rgba(0,0,0,0.28);
-    margin-top: 5rem;
+    float: right;
     position: relative;
-    margin-right: 5rem;
-    margin-left: auto;
-    width: 20%;
+    width: 24%;
     z-index: 1;
+    text-align: left;
 }
 
 .profile-title {
@@ -106,6 +120,8 @@
     text-align: center;
     background-color: #302C71;
     margin-left: 1.4rem;
+    -webkit-border-radius: .3125rem;
+    -moz-border-radius: .3125rem;
     border-radius: .3125rem;
     margin-top: 1rem;
     padding-top: .1rem;
@@ -113,22 +129,32 @@
     position: absolute;
 }
 
-.percentText {
+.pie-chart-box {
+    margin-left: 50%;
+    width: 50%;
     position: absolute;
-    top: 4rem;
+    padding-right: 2%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+}
+
+.percent-text {
+    position: absolute;
     color: #81BBED;
-    font-size: 30px;
-    width: 8.4rem;
-    text-align: center;
-    line-height: 36px;
+    font-size: 1.25rem;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
 }
 
 .card-area {
     display: flex;
     justify-content: space-between;
     z-index: 1;
-    margin-top: 25rem;
+    text-align: left
 }
+
 .card {
     width: 45%;
     height: 10rem;
@@ -157,6 +183,8 @@
     height: 2rem;
     width: 8rem;
     background-color: #302C71;
+    -webkit-border-radius: .3125rem;
+    -moz-border-radius: .3125rem;
     border-radius: .3125rem;
     color: #FFFFFF;
     margin-top: 2.25rem;
