RW-607 refactored getting demo info from memory.

--- a/ui/src/app/cohort-review/table-page/table-page.html
+++ b/ui/src/app/cohort-review/table-page/table-page.html
@@ -56,7 +56,7 @@
       {{ participant.id }}
     </clr-dg-cell>
     <clr-dg-cell>
-      {{ participant.dob | date:'yyyy-MM-dd' }}
+      {{ participant.birthDate }}
     </clr-dg-cell>
     <clr-dg-cell>
       {{ participant.gender | titlecase }}
