one more little tweak

--- a/ui/src/app/views/homepage/component.css
+++ b/ui/src/app/views/homepage/component.css
@@ -188,7 +188,7 @@
     -moz-border-radius: .3125rem;
     border-radius: .3125rem;
     color: #FFFFFF;
-    margin-top: 2.25rem;
+    top: 6.75rem;
     position: absolute;
     text-align: center;
     vertical-align: middle;
