--- a/ui/src/app/views/homepage/component.css
+++ b/ui/src/app/views/homepage/component.css
@@ -123,7 +123,7 @@
     -webkit-border-radius: .3125rem;
     -moz-border-radius: .3125rem;
     border-radius: .3125rem;
-    margin-top: 1rem;
+    top: 9rem;
     padding-top: .1rem;
     font-size: .6rem;
     border-style: none;
