search views started

--- a/public-ui/src/app/views/ehr-view/ehr-view.component.html
+++ b/public-ui/src/app/views/ehr-view/ehr-view.component.html
@@ -16,7 +16,7 @@
         Participants
       </h5>
       <div class="card-stat">
-        {{searchResult.countValue | number}}
+        {{dbDomain.countValue | number}}
       </div>
       <p class="card-text bigger">
         More Excited
