--- a/ui/src/app/views/account-creation/component.html
+++ b/ui/src/app/views/account-creation/component.html
@@ -14,7 +14,7 @@
       </div>
     </div>
     <div class="form-section">
-      <input type="text" class="short-input" id="username" name="username"
+      <input type="text" class="long-input" id="username" name="username"
              [(ngModel)]="profile.username" (ngModelChange)="usernameChanged()" (blur)="leaveFocusUsername()"
              (focus)="enterFocusUsername()" placeholder="New Username"
              [ngClass]="{'successfulInput': showUsernameValidationSuccess, 'unsuccessfulInput': showUsernameValidationError}">
@@ -44,7 +44,7 @@
       </div>
     </div>
     <div class="form-section">
-      <input type="password" class="short-input" id="password" name="password" [(ngModel)]="password" placeholder="Password"
+      <input type="password" class="long-input" id="password" name="password" [(ngModel)]="password" placeholder="Password"
              (blur)="leaveFocusPassword()" (focus)="enterFocusPassword()"
              [ngClass]="{'successfulInput': showPasswordValidationSuccess, 'unsuccessfulInput': showPasswordValidationError}">
       <div class="icon-area">
@@ -65,7 +65,7 @@
       </div>
     </div>
     <div class="form-section">
-      <input type="password" class="short-input" id="passwordAgain" for="passwordAgain" name="passwordAgain"
+      <input type="password" class="long-input" id="passwordAgain" for="passwordAgain" name="passwordAgain"
              (blur)="leaveFocusPasswordAgain()" (focus)="enterFocusPasswordAgain()"
              [(ngModel)]="passwordAgain" placeholder="Confirm Password"
              [ngClass]="{'successfulInput': showPasswordAgainValidationSuccess, 'unsuccessfulInput': showPasswordAgainValidationError}">
