--- a/public-ui/src/app/styles/page.css
+++ b/public-ui/src/app/styles/page.css
@@ -83,6 +83,7 @@ p {
     background-color: #FFFFFF;
     border-radius: 4px;
     box-shadow: 0 4px 12px 0 rgba(0,0,0,0.15);
+    position: relative;
 }
 
 .box-header {
