--- a/public-ui/src/app/views/ehr-view/ehr-view.component.html
+++ b/public-ui/src/app/views/ehr-view/ehr-view.component.html
@@ -11,7 +11,7 @@
 
 <div class="row">
   <div class="col-md-4 col-sm-4 col-xs-12">
-    <div class="white-card-box">
+    <div class="white-card-box top-stat">
       <h5 class="box-title">
         Participants
       </h5>
@@ -19,26 +19,39 @@
         {{dbDomain.countValue | number}}
       </div>
       <p class="card-text bigger">
-        More Excited
+        There are {{dbDomain.countValue}} {{dbDomain.domainDisplay.toLowerCase()}} out of {{totalParticipants | number}}
+        total participants with relevant diagnoses.
       </p>
 
-      <div>
-        <button class="btn btn-primary" (click)="viewResults(r)"> View Full List </button>
+      <div class="card-text bottom">
+        <clr-icon shape="info-standard"></clr-icon> Why a range of particpants?
       </div>
     </div>
   </div>
 
   <div class="col-md-8 col-sm-8 col-xs-12">
-    <div class="white-card-box">
-      <h5 class="box-title">
-        Big Box
-      </h5>
-      <div class="card-stat">
-        Card Stat
+    <div class="white-card-box top-stat">
+      <div class="row">
+        <div class="col-md-6 col-xs-12">
+          <h5 class="box-title">
+            Diagnoses
+          </h5>
+          <div class="card-stat">
+            Card Stat
+          </div>
+          <p class="card-text bigger">
+            <clr-icon shape="help-info"></clr-icon> What is SNOMED?
+          </p>
+        </div>
+        <div class="col-md-6 col-xs-12">
+          <h5 class="box-title">
+            Chart here
+          </h5>
+
+
+        </div>
       </div>
-      <p class="card-text bigger">
-        Bigger Card text
-      </p>
+
     </div>
   </div>
 </div>
@@ -46,7 +59,9 @@
 
 <div class="row result-list">
   <div class="col-xs-12">
-    <h4> Result list goes here </h4>
-  </div>l
+    <div class="white-card-box">
+      <div *ngFor="let r of searchResults"> {{r.conceptId}} -- {{r.conceptName}}</div>
+    </div>
+  </div>
 </div>
 
