--- a/ui/src/app/views/homepage/component.css
+++ b/ui/src/app/views/homepage/component.css
@@ -165,6 +165,10 @@
     padding-left: 1.2rem;
     padding-top: 1rem;
     position: relative;
+    -webkit-border-radius: .3125rem;
+    -moz-border-radius: .3125rem;
+    border-radius: .3125rem;
+    border-style: none;
 }
 
 .card *.title {
@@ -217,7 +221,7 @@
 
 .bottom-links {
     color: #9B9B9B;
-    font-size: 1rem;
+    font-size: .8rem;
     margin-left: 1.5rem;
     margin-top: 2rem;
 }
