quick search results grid progress

--- a/public-ui/src/app/styles/buttons.css
+++ b/public-ui/src/app/styles/buttons.css
@@ -73,3 +73,9 @@ button.btn.btn-link {
   color: #4a4a4a;
   font-size: 14px;
 }
+
+button.icon-btn {
+  background-color: inherit;
+  border: none;
+  height:1.25rem;
+}
