--- a/ui/src/app/views/homepage/component.html
+++ b/ui/src/app/views/homepage/component.html
@@ -9,7 +9,7 @@
         <div class="profile-box">
             <div style="float: left; width: 50%">
                 <div class="profile-title">
-                    Complete your profile
+                    COMPLETE YOUR PROFILE
                 </div>
                 <div class="profile-title profile-tips">
                     You can quickly:
@@ -17,7 +17,7 @@
                     <li>Add your role</li>
                     <li>Update something else</li>
                 </div>
-                <button class="profile-update-button" (click)="navigateToProfile()">Update</button>
+                <button class="profile-update-button" (click)="navigateToProfile()">UPDATE</button>
             </div>
             <div class="pie-chart-box">
                 <ngx-charts-pie-chart
