--- a/public-ui/src/app/views/ehr-view/ehr-view.component.html
+++ b/public-ui/src/app/views/ehr-view/ehr-view.component.html
@@ -75,15 +75,7 @@
           <div class="col-md-4"> {{r.vocabularyId}} {{r.conceptCode}}</div>
           <div class="col-md-1 flex-xs-middle"> <button class="icon-btn" (click)="r.expanded = !r.expanded"> <clr-icon shape="bar-chart" style="height: 24px; color: #2691D0;"></clr-icon> </button> </div>
           <div class="col-xs-12 row-expansion" *ngIf="r.expanded">
-          <div class="row" >
-
-              <div class="col-md-6 col-xs-12">
-                <app-chart [concepts]="searchResults" [pointWidth]="10"> </app-chart>
-              </div>
-              <div class="col-md-6 col-xs-12">
-                <app-chart [concepts]="searchResults" [pointWidth]="10"> </app-chart>
-              </div>
-          </div>
+            <app-concept-charts [concept]="r"></app-concept-charts>
           </div>
 
         </div>
